--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 a {
   color: #590303;
-  text-decoration: line-through;
+  text-decoration: inherit;
   font-size: 20px;
   font-style: oblique;
 }
